--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ black==23.1.0
 certifi
 cfgv==3.3.1
 click==8.1.3
+datasets
 distlib==0.3.6
 exceptiongroup==1.1.0
 filelock==3.9.0
@@ -26,5 +27,7 @@ PyYAML==6.0
 ruff==0.0.252
 scikit-learn
 tomli==2.0.1
+transformers
 typing_extensions==4.5.0
 virtualenv==20.19.0
+wandb
